--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8" />
-<title>أسواق دير العسل للخضار والفواكه</title>
+ 
+<title>تسجيل الدخول</title>
+<link rel="stylesheet" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
@@ -357,7 +359,22 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
 </style>
 </head>
 <body>
+<div class="container">
+    <div class="card">
+        <h2 id="formTitle">تسجيل الدخول</h2>
 
+        <form id="authForm">
+            <input type="text" id="phone" placeholder="رقم الهاتف" required>
+            <input type="password" id="password" placeholder="كلمة السر" required>
+            <button type="submit">دخول</button>
+        </form>
+
+        <p id="toggleText">
+            ليس لديك حساب؟
+            <span id="toggleBtn">إنشاء حساب</span>
+        </p>
+    </div>
+</div>
 <section class="hero">
   <img src="images/واصل-removebg-preview.png" class="corner-img veggies" alt="خضار">
   <div class="profile-wrapper">
@@ -471,6 +488,7 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
 <div class="copyright-bar">
   © 2026 جميع الحقوق محفوظة - أسواق دير العسل للخضار والفواكه
 </div>
+ <script src="script.js"></script>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
   const map = L.map('map').setView([31.9454, 35.9284], 13);
