--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <style>
 /* === أساسي === */
 * { box-sizing:border-box; margin:0; padding:0; font-family:'Cairo',sans-serif; }
-body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow-x:hidden; }
+body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow-x:hidden;
+     }
 
 .hero { position:relative; text-align:center; background: linear-gradient(to bottom,#0b5f87 0%,#0b5f87 55%,#2fbf71 100%); padding:100px 20px 60px; overflow:hidden; }
 .subtitle { color:#7CFF6B; font-size:clamp(18px,3vw,26px); margin-bottom:15px; }
