--- a/index.html
+++ b/index.html
@@ -362,7 +362,14 @@ body {
 </style>
 </head>
 <body>
-<div class="container">
+
+<!-- Splash Screen -->
+<div id="splash">
+    <h1>ااسواق دير العسل للخضار والفواكة</h1>
+</div>
+
+<!-- Login Card -->
+<div class="container" id="authContainer">
     <div class="card">
         <h2 id="formTitle">تسجيل الدخول</h2>
 
@@ -373,8 +380,7 @@ body {
         </form>
 
         <p id="toggleText">
-            ليس لديك حساب؟
-            <span id="toggleBtn">إنشاء حساب</span>
+            ليس لديك حساب؟ <span id="toggleBtn">إنشاء حساب</span>
         </p>
     </div>
 </div>
