--- a/home.html
+++ b/home.html
@@ -363,27 +363,7 @@ body {
 </head>
 <body>
 
-<!-- Splash Screen -->
-<div id="splash">
-    <h1>ااسواق دير العسل للخضار والفواكة</h1>
-</div>
 
-<!-- Login Card -->
-<div class="container" id="authContainer">
-    <div class="card">
-        <h2 id="formTitle">تسجيل الدخول</h2>
-
-        <form id="authForm">
-            <input type="text" id="phone" placeholder="رقم الهاتف" required>
-            <input type="password" id="password" placeholder="كلمة السر" required>
-            <button type="submit">دخول</button>
-        </form>
-
-        <p id="toggleText">
-            ليس لديك حساب؟ <span id="toggleBtn">إنشاء حساب</span>
-        </p>
-    </div>
-</div>
 <section class="hero">
   <img src="images/واصل-removebg-preview.png" class="corner-img veggies" alt="خضار">
   <div class="profile-wrapper">
@@ -497,7 +477,12 @@ body {
 <div class="copyright-bar">
   © 2026 جميع الحقوق محفوظة - أسواق دير العسل للخضار والفواكه
 </div>
- <script src="script.js"></script>
+ <script>
+
+if(!localStorage.getItem("user")){
+    window.location.href = "index.html";
+}
+ </script>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
   const map = L.map('map').setView([31.9454, 35.9284], 13);
