--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <title>تسجيل الدخول</title>
+
+    <!-- ربط ملف الستايل -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- خط كايرو -->
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+</head>
+
 <body>
 
 <div class="container" id="authContainer">
@@ -17,4 +30,6 @@
 </div>
 
 <script src="script.js"></script>
+
 </body>
+</html>
